# seshat

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh  release-plz.toml  seshat.example.toml  seshat.toml
crates/seshat-bin/: CHANGELOG.md  Cargo.toml
crates/seshat-bin/src/: config.rs  main.rs
crates/seshat-bin/tests/: completions_integration.rs  scan_integration.rs  serve_guardrails.rs
crates/seshat-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/seshat-cli/embedded/: SKILL.md  seshat.md
crates/seshat-cli/embedded/hooks/: seshat-pre-tool  seshat-session-start
crates/seshat-cli/src/: args.rs  completions.rs  config.rs  dangerous_path.rs  db.rs  debug.rs  decisions.rs  error.rs  format.rs  init.rs  instructions.rs  lib.rs  review.rs  scan.rs  serve.rs  status.rs  uninstall.rs  update.rs  version_cache.rs
crates/seshat-cli/src/report/: conventions.rs  mod.rs  overview.rs
crates/seshat-cli/src/tui/: app.rs  mod.rs  review_wizard.rs  widgets.rs
crates/seshat-cli/tests/: cross_branch_decisions.rs  cross_branch_workspace_crates.rs  decisions_export_import.rs  decisions_forget.rs  git_unavailable_fallback.rs  init_instructions.rs  review_freshness.rs  scan_records_head.rs  serve_freshness.rs  serve_head_change.rs  tui_review_integration.rs  uninstall.rs  worktree_integration.rs
crates/seshat-core/: CHANGELOG.md  Cargo.toml
crates/seshat-core/src/: config.rs  dependency.rs  detector_result.rs  edge.rs  error.rs  ids.rs  ir.rs  knowledge.rs  lib.rs  snippet.rs  symbol_snippet.rs  test_helpers.rs
crates/seshat-detectors/: CHANGELOG.md  Cargo.toml
crates/seshat-detectors/src/: confidence.rs  dependency_usage.rs  error.rs  error_handling.rs  export_patterns.rs  file_structure.rs  import_organization.rs  lib.rs  logging_observability.rs  naming.rs  pipeline.rs  snippet.rs  test_patterns.rs  trait_def.rs  usage_evidence.rs
crates/seshat-detectors/tests/: snippet_quality.rs
crates/seshat-detectors/tests/fixtures/python_samples/: import_grouping.py  logging_patterns.py  pytest_patterns.py  type_hints.py
crates/seshat-detectors/tests/fixtures/rust_samples/: dependency_usage.rs  derive_patterns.rs  import_grouping.rs  thiserror_errors.rs  tracing_logging.rs
crates/seshat-detectors/tests/fixtures/typescript_samples/: barrel_exports.ts  custom_errors.ts  dependency_usage.ts  import_patterns.ts  jest_tests.ts
crates/seshat-embedding/: CHANGELOG.md  Cargo.toml
crates/seshat-embedding/src/: lib.rs
crates/seshat-graph/: CHANGELOG.md  Cargo.toml
crates/seshat-graph/benches/: diff_impact_bench.rs
crates/seshat-graph/src/: code_pattern.rs  conventions.rs  cross_reference.rs  decisions.rs  dependencies.rs  detection.rs  diff_impact.rs  error.rs  fts.rs  golden_files.rs  lib.rs  project_context.rs  validate_approach.rs
crates/seshat-graph/tests/: transitive_perf.rs
crates/seshat-mcp/: CHANGELOG.md  Cargo.toml
crates/seshat-mcp/src/: call_logger.rs  call_logger_keys.rs  envelope.rs  error.rs  lib.rs  scope.rs  server.rs
crates/seshat-mcp/src/tools/: diff_impact.rs  mod.rs  project_context.rs  query_code_pattern.rs  query_convention.rs  query_dependencies.rs  record_decision.rs  remove_decision.rs  update_decision.rs  validate_approach.rs
crates/seshat-scanner/: CHANGELOG.md  Cargo.toml
crates/seshat-scanner/src/: discovery.rs  documentation.rs  error.rs  git_dates.rs  git_utils.rs  lib.rs  manifest.rs  module_structure.rs  orchestrator.rs  registry.rs
crates/seshat-scanner/src/parser/: javascript_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  typescript_parser.rs
crates/seshat-scanner/src/registry/: crates_io.rs  mod.rs  npm.rs  pypi.rs  registry_mapping.rs
crates/seshat-scanner/tests/: documentation_integration.rs  incremental_scan_integration.rs  javascript_parser_integration.rs  module_structure_integration.rs  python_parser_integration.rs  rust_parser_integration.rs  scan_orchestration_integration.rs  symbol_index_integration.rs  typescript_parser_integration.rs
crates/seshat-scanner/tests/fixtures/docs_project/: CONTRIBUTING.md  README.md  api-spec.yaml  legacy-api.yml  user-schema.json
crates/seshat-scanner/tests/fixtures/js_monorepo/: package.json
crates/seshat-scanner/tests/fixtures/python_project/: main.py
crates/seshat-storage/: CHANGELOG.md  Cargo.toml
crates/seshat-storage/migrations/: V10__add_embedding_updated_at.sql  V11__branches_table.sql  V12__decisions_table.sql  V13__symbol_index.sql  V14__branch_metadata.sql  V1__initial_schema.sql  V2__package_metadata.sql  V3__add_file_dates.sql  V4__add_conventions_fts.sql  V5__add_submodules.sql  V6__code_embeddings.sql  V7__add_ir_schema_version.sql  V8__add_description_hash.sql  V9__drop_redundant_embedding_index.sql
crates/seshat-storage/src/: backup.rs  db.rs  error.rs  ir_serialization.rs  lib.rs
crates/seshat-storage/src/repository/: branch_metadata_repository.rs  branch_repository.rs  decision_repository.rs  edge_repository.rs  embedding_repository.rs  file_ir_repository.rs  mod.rs  node_repository.rs  package_metadata_repository.rs  repo_metadata_repository.rs  submodule_repository.rs  symbol_index_repository.rs
crates/seshat-watcher/: CHANGELOG.md  Cargo.toml
crates/seshat-watcher/src/: error.rs  events.rs  hot_tier.rs  lib.rs  warm_tier.rs
crates/seshat-watcher/tests/: symbol_index_integration.rs
tests/fixtures/python_project/: expected_conventions.json  pyproject.toml
tests/fixtures/python_project/src/: __init__.py
tests/fixtures/python_project/src/errors/: __init__.py  app_error.py
tests/fixtures/python_project/src/handlers/: __init__.py  health.py  user_handler.py
tests/fixtures/python_project/src/models/: __init__.py  base.py  project.py  user.py
tests/fixtures/python_project/src/services/: __init__.py  cache_service.py  notification_service.py  user_service.py
tests/fixtures/python_project/tests/: test_helpers.py  test_models.py  test_user_service.py
tests/fixtures/rust_project/: Cargo.toml  expected_conventions.json
tests/fixtures/rust_project/src/: error.rs  lib.rs  main.rs  middleware.rs
(+156 files in other folders)
