[workspace]
resolver = "2"
members = [
    "crates/seshat-core",
    "crates/seshat-scanner",
    "crates/seshat-detectors",
    "crates/seshat-storage",
    "crates/seshat-graph",
    "crates/seshat-mcp",
    "crates/seshat-watcher",
    "crates/seshat-cli",
    "crates/seshat-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/KSDaemon/seshat"

[workspace.dependencies]
# Internal crates
seshat-core = { path = "crates/seshat-core" }
seshat-scanner = { path = "crates/seshat-scanner" }
seshat-detectors = { path = "crates/seshat-detectors" }
seshat-storage = { path = "crates/seshat-storage" }
seshat-graph = { path = "crates/seshat-graph" }
seshat-mcp = { path = "crates/seshat-mcp" }
seshat-watcher = { path = "crates/seshat-watcher" }
seshat-cli = { path = "crates/seshat-cli" }

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Configuration
toml = "0.8"
dirs = "6"

# Hashing
sha2 = "0.11"

# File walking
ignore = "0.4"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"

# Testing
tempfile = "3"

# Binary serialization
postcard = { version = "1", features = ["alloc"] }

# YAML parsing
serde_yml = "0.0.11"

# Parallelism
rayon = "1.10"

# HTTP client
ureq = "3"

# Git repository access
gix = { version = "0.72", default-features = false, features = ["max-performance-safe", "blob-diff"] }

# Database
rusqlite = { version = "0.37", features = ["bundled", "modern_sqlite"] }
refinery = { version = "0.9", features = ["rusqlite"] }
