[workspace]
resolver = "2"
members = [
    "crates/seshat-core",
    "crates/seshat-scanner",
    "crates/seshat-detectors",
    "crates/seshat-storage",
    "crates/seshat-graph",
    "crates/seshat-mcp",
    "crates/seshat-embedding",
    "crates/seshat-watcher",
    "crates/seshat-cli",
    "crates/seshat-bin",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/KSDaemon/seshat"

[workspace.dependencies]
# Internal crates
seshat-core = { path = "crates/seshat-core" }
seshat-scanner = { path = "crates/seshat-scanner" }
seshat-detectors = { path = "crates/seshat-detectors" }
seshat-storage = { path = "crates/seshat-storage" }
seshat-graph = { path = "crates/seshat-graph" }
seshat-mcp = { path = "crates/seshat-mcp" }
seshat-embedding = { path = "crates/seshat-embedding" }
seshat-watcher = { path = "crates/seshat-watcher" }
seshat-cli = { path = "crates/seshat-cli" }

# Error handling
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Configuration
toml = "0.8"
dirs = "6"

# Hashing
sha1 = "0.10"
sha2 = "0.11"

# Archive extraction
flate2 = "1"
tar = "0.4"

# File walking
ignore = "0.4"
globset = "0.4"

# Tree-sitter parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Binary serialization
postcard = { version = "1", features = ["alloc"] }

# YAML parsing
serde_yml = "0.0.11"

# Parallelism
rayon = "1.10"

# HTTP client
ureq = { version = "3", features = ["json"] }

# Built-in embeddings (local ONNX inference, no external services)
fastembed = "4"

# Git repository access
gix = { version = "0.72", default-features = false, features = ["max-performance-safe", "blob-diff"] }

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
owo-colors = "4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"

# Database
rusqlite = { version = "0.37", features = ["bundled", "modern_sqlite"] }
refinery = { version = "0.9", features = ["rusqlite"] }

# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io"] }

# Date/time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }

# TUI
ratatui = "0.30"
crossterm = "0.29.0"
unicode-width = "0.2"

# File watching
notify-debouncer-full = "0.7"

# ===========================================================================
# Build profiles
# ===========================================================================

[profile.dev]
# opt-level=1: less LLVM work than default 0, faster incremental builds
opt-level = 1
# Only line numbers in debug info — smaller artifacts, faster linking
debug = 1
# Unpacked DWARF: faster linking on macOS (avoids monolithic .dSYM)
split-debuginfo = "unpacked"

[profile.dev.package."*"]
# Compile dependencies at opt-level=2 once and cache — tests run faster,
# no penalty on incremental rebuilds of your own code
opt-level = 2

[profile.test]
inherits = "dev"

[profile.release]
# Keep release defaults, but strip symbols to reduce binary size
strip = "debuginfo"
