[package]
name = "seshat-bin"
description = "Seshat binary entry point"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "seshat"
path = "src/main.rs"

[dependencies]
seshat-cli.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
dirs.workspace = true
