[package]
name = "seshat-cli"
description = "CLI commands and TUI for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
seshat-scanner.workspace = true
seshat-graph.workspace = true
seshat-mcp.workspace = true
thiserror.workspace = true
tracing.workspace = true
