[package]
name = "seshat-cli"
description = "CLI commands and TUI for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
seshat-scanner.workspace = true
seshat-detectors.workspace = true
seshat-storage.workspace = true
seshat-graph.workspace = true
seshat-embedding.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
indicatif.workspace = true
dirs.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
seshat-mcp.workspace = true
seshat-watcher.workspace = true
tokio.workspace = true
chrono.workspace = true
which.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tempfile.workspace = true
seshat-core = { workspace = true, features = ["test-helpers"] }
