[package]
name = "seshat-core"
description = "Core types, traits, and intermediate representation for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
test-helpers = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
toml.workspace = true
