[package]
name = "seshat-detectors"
description = "Convention detection engine for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true
