[package]
name = "seshat-embedding"
description = "Embedding provider abstraction with Ollama and OpenAI implementations for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
toml.workspace = true
