[package]
name = "seshat-embedding"
description = "Built-in local embedding provider for Seshat (all-MiniLM-L6-v2 via fastembed)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Enable built-in local embedding provider (fastembed + all-MiniLM-L6-v2).
# Enabled by default — disable to exclude ML dependencies from the binary.
default = ["builtin-embeddings"]
builtin-embeddings = ["dep:fastembed"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

# Built-in provider: local ONNX-based embeddings, no external services needed.
fastembed = { version = "4", optional = true }

[dev-dependencies]
toml.workspace = true
