[package]
name = "seshat-graph"
description = "Knowledge graph intelligence and query logic for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
seshat-storage.workspace = true
seshat-detectors.workspace = true
seshat-embedding.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha1.workspace = true
sha2.workspace = true
gix.workspace = true

[dev-dependencies]
seshat-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
