[package]
name = "seshat-scanner"
description = "Tree-sitter parsing and file discovery for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
ignore.workspace = true

[dev-dependencies]
seshat-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
