[package]
name = "seshat-scanner"
description = "Tree-sitter parsing and file discovery for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
seshat-storage.workspace = true
thiserror.workspace = true
tracing.workspace = true
sha2.workspace = true
ignore.workspace = true
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
serde_yml.workspace = true
ureq.workspace = true
gix.workspace = true

[dev-dependencies]
seshat-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
