[package]
name = "seshat-watcher"
description = "File watching and incremental update pipeline for Seshat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
seshat-core.workspace = true
seshat-scanner.workspace = true
seshat-detectors.workspace = true
seshat-storage.workspace = true
seshat-graph.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
notify-debouncer-full.workspace = true
globset.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
seshat-core = { workspace = true, features = ["test-helpers"] }
tempfile.workspace = true
