[package]
name = "fixture-app"
version = "0.1.0"
edition = "2021"
description = "A fixture Rust project with known coding conventions for detector testing"

[dependencies]
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
